--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hyde
+title: Tutoring
 email: stephane.cedroni@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "mysite" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
