--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: stephane.cedroni@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here.
 # baseurl: /mysite # the subpath of your site, e.g. /blog
-# baseurl: ""
+url: "https://stefanocdn.github.io/mysite/"
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
